--- a/public/style.css
+++ b/public/style.css
@@ -1,14 +1,148 @@
-* {
-    margin: 0;
-    box-sizing: border-box;
-    padding: 0;
-    background-color: beige;
+#nav {
+    background-color: #e3f2fd;
+    padding: 10px;
 }
 
+.nav-links {
+    text-decoration: underline;
+    font-size: 20px;
+    font-family: monospace;
+}
+
+#nav-div {
+    background-color: #e3f2fd;
+}
+
+a {
+    background-color: #e3f2fd;
+}
 
 .stranger {
-    font-size: 40px;
+    font-size: 30px;
+    display: flex;
+    margin: auto;
+    padding: 10px;
 }
 
 
+.login-form {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 20px;
+}
+
+#login-form-btn {
+    margin-top: 20px;
+}
+
+.login-password {
+    padding-top: 20px;
+}
+
+#listings {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+
+}
+
+.addpost-btn {
+    max-width: 8rem;
+    display: flex;
+    border: 1px solid;
+    background-color:#e3f2fd;
+    text-decoration: none;
+    padding: 3px;
+    border-radius: 10px;
+    margin: auto;
+    justify-content: center;
+}
+
+#createPost {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+}
+
+#postTitle {
+    border-bottom: 8px solid #e3f2fd;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+}
+
+.user-posts {
+    margin-top: 40px;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid #e3f2fd;
+    border-radius: 10px;
+    box-shadow: 5px 5px #e3f2fd;
+    margin-right: 10px;
+    padding: 10px;
+}
+
+#message-user{
+    max-width: 150px;
+    margin-bottom: 20px;
+}
+
+.message-text {
+    margin-bottom: 20px;
+}
+
+.btn-outline-danger{
+    max-width: 100px;
+    margin-bottom: 20px;
+}
+
+
+.wrapper {
+    background-color: #e3f2fd;
+    list-style-type: none;
+    padding: 0;
+    border-radius: 3px;
+  }
+  .form-row {
+    display: flex;
+    justify-content: center;
+    padding: .5em;
+    padding-top: 10px;
+  }
+  .form-row > label {
+    padding: .5em 1em .5em 0;
+  }
+  .form-row > input {
+    flex: 1;
+  }
+  .form-row > input,
+  .form-row > button {
+    padding: .5em;
+  }
+
+  #willDeliverLable {
+    margin-right: 20px;
+    padding-left: 8px;
+  }
+
+  .messageInput {
+    max-width: 40%;
+  }
+
+  .messagePosts {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+  }
+  
+  .newAccount {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  
 
